# rsql

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  deny.toml  dist-workspace.toml  index.html  oranda-v0.6.1.css  oranda-workspace.json  oranda.json  release-plz.toml
drivers/arrow/: Cargo.toml  README.md
drivers/arrow/src/: driver.rs
drivers/arrow/tests/: arrow.rs
drivers/avro/: Cargo.toml  README.md
drivers/avro/src/: driver.rs
drivers/avro/tests/: avro.rs
drivers/brotli/: Cargo.toml  README.md
drivers/brotli/src/: driver.rs
drivers/brotli/tests/: brotli.rs
drivers/bzip2/: Cargo.toml  README.md
drivers/bzip2/src/: driver.rs
drivers/bzip2/tests/: bzip2.rs
drivers/clickhouse/: Cargo.toml
drivers/clickhouse/src/: connection.rs  driver.rs  lib.rs  metadata.rs  results.rs
drivers/clickhouse/tests/: clickhouse.rs
drivers/cockroachdb/: Cargo.toml
drivers/cockroachdb/src/: driver.rs
drivers/cockroachdb/tests/: cockroachdb.rs
drivers/cratedb/: Cargo.toml
drivers/cratedb/src/: driver.rs
drivers/cratedb/tests/: cratedb.rs
drivers/csv/: Cargo.toml  README.md
drivers/csv/src/: driver.rs
drivers/csv/tests/: csv.rs
drivers/delimited/: Cargo.toml  README.md
drivers/delimited/src/: driver.rs
drivers/delimited/tests/: delimited.rs
drivers/duckdb/: Cargo.toml
drivers/duckdb/src/: driver.rs  lib.rs  metadata.rs  results.rs
drivers/dynamodb/: Cargo.toml  README.md
drivers/dynamodb/src/: driver.rs  metadata.rs  results.rs
drivers/dynamodb/tests/: dynamodb.rs
drivers/excel/: Cargo.toml  README.md
drivers/excel/src/: driver.rs
drivers/excel/tests/: excel.rs
drivers/file/: Cargo.toml  README.md
drivers/file/src/: driver.rs  lib.rs
drivers/file/tests/: file.rs
drivers/flightsql/: Cargo.toml  README.md
drivers/flightsql/src/: driver.rs  lib.rs  metadata.rs  results.rs
drivers/flightsql/tests/: flightsql.rs
drivers/fwf/: Cargo.toml  README.md
drivers/fwf/src/: driver.rs
drivers/fwf/tests/: fwf.rs
drivers/gzip/: Cargo.toml  README.md
drivers/gzip/src/: driver.rs
drivers/gzip/tests/: gzip.rs
drivers/http/: Cargo.toml  README.md
drivers/http/src/: driver.rs
drivers/http/tests/: http.rs
drivers/https/: Cargo.toml  README.md
drivers/json/: Cargo.toml  README.md
drivers/libsql/: Cargo.toml
drivers/lz4/: Cargo.toml  README.md
drivers/mariadb/: Cargo.toml
drivers/mysql/: Cargo.toml
rsql_cli/: CHANGELOG.md  Cargo.toml  README.md  artifacts.json  build.rs  changelog.rss  create-demos.sh  index.html  oranda.json  rsql_cli-installer.ps1.txt  rsql_cli-installer.sh.txt
rsql_cli/artifacts/: index.html
rsql_cli/benches/: rsql.rs
rsql_cli/book/: 404.html  appendix-00.html  appendix-01-rsql-toml.html  appendix-02-supported-locales.html  ch01-00-getting-started.html  ch01-01-installation.html  ch01-02-first-query.html  ch02-00-commands.html  ch02-01-bail.html  ch02-02-clear.html  ch02-03-color.html  ch02-04-drivers.html  ch02-05-echo.html  ch02-06-exit.html  ch02-07-footer.html  ch02-08-format.html  ch02-09-header.html  ch02-10-help.html  ch02-11-history.html  ch02-12-indexes.html  ch02-13-locale.html  ch02-14-print.html  ch02-15-quit.html  ch02-16-read.html  ch02-17-sleep.html  ch02-18-tables.html  ch02-19-timer.html  index.html  print.html  searchindex.js  searchindex.json
rsql_cli/changelog/: index.html
rsql_cli/docs/: book.toml
rsql_cli/locales/: app.yml
rsql_cli/resources/: demo.cast  demo.sql  demo.tape  demo.webm
rsql_cli/src/: main.rs  update.rs  version.rs
rsql_cli/tests/: rsql.rs
rsql_cli/wix/: main.wxs
rsql_core/: CHANGELOG.md  Cargo.toml  README.md
rsql_core/benches/: bench_main.rs  version.rs
rsql_core/locales/: commands-bail.yml  commands-changes.yml  commands-clear.yml  commands-color.yml  commands-describe.yml  commands-drivers.yml  commands-echo.yml  commands-exit.yml  commands-footer.yml  commands-format.yml  commands-header.yml  commands-help.yml  commands-history.yml  commands-indexes.yml  commands-limit.yml  commands-locale.yml  commands-output.yml  commands-print.yml  commands-quit.yml  commands-read.yml  commands-rows.yml  commands-sleep.yml  commands-system.yml  commands-tables.yml  commands-tee.yml  commands-timer.yml  commands.yml  formatters.yml  general.yml  shell.yml
rsql_core/resources/: rsql.toml
rsql_core/src/: configuration.rs  lib.rs  version.rs
rsql_core/tests/: shell.rs  version.rs
rsql_driver/: Cargo.toml  README.md
rsql_driver/locales/: general.yml
rsql_driver/src/: connection.rs  driver.rs  driver_manager.rs  error.rs  lib.rs  metadata.rs  to_sql.rs  url.rs  value.rs
rsql_drivers/: CHANGELOG.md  Cargo.toml  README.md
rsql_drivers/locales/: general.yml
rsql_drivers/src/: connection.rs  driver.rs  driver_manager.rs  error.rs  lib.rs  metadata.rs  row.rs  test.rs  url.rs  value.rs
rsql_drivers/tests/: cockroachdb.rs  files.rs
rsql_formatters/: CHANGELOG.md  Cargo.toml  README.md
rsql_formatters/locales/: expanded.yml  formatters.yml
rsql_formatters/src/: ascii.rs  csv.rs  delimited.rs  error.rs  expanded.rs  footer.rs  formatter.rs  highlighter.rs  html.rs  json.rs  jsonl.rs  lib.rs  markdown.rs  plain.rs  psql.rs  sqlite.rs  table.rs  tsv.rs  unicode.rs  xml.rs  yaml.rs
rsql_repl/: Cargo.toml  README.md
rsql_repl/benches/: bench_main.rs
rsql_repl/locales/: commands-bail.yml  commands-catalogs.yml  commands-changes.yml  commands-clear.yml  commands-color.yml  commands-completions.yml  commands-describe.yml  commands-drivers.yml  commands-echo.yml  commands-exit.yml  commands-footer.yml  commands-foreign.yml  commands-format.yml  commands-header.yml  commands-help.yml  commands-history.yml  commands-indexes.yml  commands-limit.yml  commands-locale.yml  commands-output.yml  commands-primary.yml  commands-print.yml  commands-quit.yml  commands-read.yml  commands-rows.yml  commands-schemas.yml  commands-sleep.yml  commands-system.yml  commands-tables.yml  commands-tee.yml  commands-timer.yml  commands-views.yml  commands.yml  general.yml  shell.yml
rsql_repl/src/: lib.rs
rsql_repl/tests/: shell.rs
(+709 files in other folders)
