[workspace]
default-members = [
    "drivers/*",
    "rsql_cli",
    "rsql_core",
    "rsql_driver",
    "rsql_drivers",
    "rsql_formatters",
    "rsql_repl",
]
members = [
    "drivers/*",
    "examples/*",
    "rsql_cli",
    "rsql_core",
    "rsql_driver",
    "rsql_drivers",
    "rsql_formatters",
    "rsql_repl",
]
resolver = "3"

[workspace.package]
authors = ["Brian Heineman <brian.heineman@gmail.com>"]
categories = ["command-line-interface", "command-line-utilities", "database"]
edition = "2024"
keywords = ["database", "mysql", "postgresql", "sql", "sqlite"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/theseus-rs/rsql"
rust-version = "1.89.0"
version = "0.19.2"

[workspace.dependencies]
ansi_colours = "1.2.3"
anyhow = "1.0.99"
arboard = "3.6.1"
arrow-array = "56.1.0"
arrow-flight = "56.1.0"
async-trait = "0.1.89"
axoupdater = "0.9.1"
aws-credential-types = { version = "1.2.6", features = ["hardcoded-credentials"] }
aws-config = { version = "1.8.6", features = ["behavior-version-latest"] }
# Required for cross builds: https://aws.github.io/aws-lc-rs/platform_support.html
aws-lc-rs = { version = "1.13.3", features = ["bindgen"] }
aws-sdk-dynamodb = { version = "1.92.0", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.104.0", features = ["behavior-version-latest"] }
base64 = "0.22.1"
bit-vec = "0.6.3"
brotli = "8.0.2"
bzip2 = "0.6.0"
calamine = "0.30.0"
chrono = "0.4.41"
clap = "4.5.46"
clap-stdin = "0.7.0"
clearscreen = "4.0.2"
clickhouse = "0.13.3"
colored = "3.0.0"
config = "0.15.15"
criterion = "0.7.0"
csv = "1.3.1"
dark-light = "2.0.0"
dirs = "6.0.0"
dotenvy = "0.15.7"
duckdb = "1.3.2"
file_type = "0.8.9"
flate2 = "1.1.2"
form_urlencoded = "1.2.2"
futures-util = "0.3.31"
getrandom = "0.3.3"
indexmap = "2.11.0"
indicatif = "0.18.0"
indoc = "2.0.6"
inquire = "0.7.5"
jiff = "0.2.15"
jwt-simple = { version = "0.12.12", default-features = false }
liblzma = "0.4.4"
libsql = "0.9.21"
lz4 = "1.28.1"
mockall = "0.13.1"
num-format = "0.4.4"
orc-rust = { version = "0.6.3", default-features = false }
os_info = "3.12.0"
polars = { version = "0.50.0", default-features = false, features = ["dtype-categorical"] }
polars-sql = "0.50.0"
postgresql_embedded = "0.20.0"
quick-xml = "0.38.3"
regex = "1.11.2"
reqwest = "0.12.23"
rusqlite = "0.30.0"
rust_decimal = "1.37.2"
rust-i18n = "3.1.5"
rustyline = "17.0.1"
serde = "1.0.219"
serde_json = "1.0.143"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
sqlx = "0.7.4"
sqlparser = "0.58.0"
supports-color = "3.0.2"
sys-locale = "0.3.2"
syntect = "5.2.0"
tabled = "0.20.0"
tempfile = "3.21.0"
termbg = "0.6.2"
test-log = "0.2.18"
testcontainers = "0.25.0"
testcontainers-modules = "0.13.0"
thiserror = "2.0.16"
tiberius = { version = "0.12.3", default-features = false }
tokio = "1.47.1"
tokio-postgres = "0.7.13"
tokio-util = "0.7.16"
tonic = "0.13.1"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-indicatif = "0.3.13"
tracing-subscriber = "0.3.20"
unicode-width = "0.2.1"
url = "2.5.7"
uuid = "1.18.0"
wiremock = "0.6.5"
zstd = "0.13.3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.release]
shared-version = true
dependent-version = "upgrade"
tag-name = "v{{version}}"
