[workspace]
default-members = [
    "drivers/*",
    "rsql_cli",
    "rsql_core",
    "rsql_driver",
    "rsql_drivers",
    "rsql_formatters",
    "rsql_repl",
]
members = [
    "drivers/*",
    "examples/*",
    "rsql_cli",
    "rsql_core",
    "rsql_driver",
    "rsql_drivers",
    "rsql_formatters",
    "rsql_repl",
]
resolver = "3"

[workspace.package]
authors = ["Brian Heineman <brian.heineman@gmail.com>"]
categories = ["command-line-interface", "command-line-utilities", "database"]
edition = "2024"
keywords = ["database", "mysql", "postgresql", "sql", "sqlite"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/theseus-rs/rsql"
rust-version = "1.92.0"
version = "0.19.4"

[workspace.dependencies]
ansi_colours = "1.2.3"
anyhow = "1.0.102"
arboard = "3.6.1"
arrow-array = "57.3.0"
arrow-flight = "57.3.0"
async-trait = "0.1.89"
axoupdater = "0.9.1"
aws-credential-types = { version = "1.2.12", features = ["hardcoded-credentials"] }
aws-config = { version = "1.8.14", features = ["behavior-version-latest"] }
# Required for cross builds: https://aws.github.io/aws-lc-rs/platform_support.html
aws-lc-rs = { version = "1.13.1", features = ["bindgen"] }
aws-sdk-dynamodb = { version = "1.105.0", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.123.0", features = ["behavior-version-latest"] }
base64 = "0.22.1"
bit-vec = "0.6.3"
brotli = "8.0.2"
bzip2 = "0.6.1"
calamine = "0.33.0"
chrono = "0.4.41"
clap = "4.5.60"
clap-stdin = "0.8.0"
clearscreen = "4.0.3"
clickhouse = "0.14.2"
colored = "3.1.1"
config = "0.15.19"
criterion = "0.8.2"
csv = "1.4.0"
dark-light = "2.0.0"
dirs = "6.0.0"
dotenvy = "0.15.7"
duckdb = "1.4.4"
file_type = "0.8.11"
flate2 = "1.1.9"
form_urlencoded = "1.2.2"
futures-util = "0.3.32"
getrandom = "0.3.3"
i18n_inflector = "0.2.1"
icu = "2.1.1"
jiff-icu = "0.2.2"
indexmap = "2.13.0"
indicatif = "0.18.4"
indoc = "2.0.7"
inquire = "0.9.3"
jiff = "0.2.20"
jwt-simple = { version = "0.12.14", default-features = false }
liblzma = "0.4.6"
libsql = "0.9.29"
lz4 = "1.28.1"
mockall = "0.14.0"
orc-rust = { version = "0.7.1", default-features = false }
os_info = "3.14.0"
polars = { version = "0.53.0", default-features = false, features = ["dtype-categorical"] }
polars-sql = "0.53.0"
postgresql_embedded = "0.20.1"
quick-xml = "0.39.2"
regex = "1.12.3"
reqwest = "0.13.2"
rusqlite = "0.30.0"
rust_decimal = "1.40.0"
rust-i18n = "3.1.5"
rustyline = "17.0.2"
serde = "1.0.228"
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
sqlx = "0.7.4"
sqlparser = "0.61.0"
supports-color = "3.0.2"
sys-locale = "0.3.2"
syntect = "5.3.0"
tabled = "0.20.0"
tempfile = "3.25.0"
termbg = "0.6.2"
test-log = "0.2.19"
testcontainers = "0.26.3"
testcontainers-modules = "0.14.0"
thiserror = "2.0.18"
tiberius = { version = "0.12.3", default-features = false }
tokio = "1.49.0"
tokio-postgres = "0.7.16"
tokio-util = "0.7.18"
tonic = "0.14.4"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-indicatif = "0.3.14"
tracing-subscriber = "0.3.22"
unicode-width = "0.2.2"
url = "2.5.8"
uuid = "1.21.0"
wiremock = "0.6.5"
zstd = "0.13.3"

[workspace.lints.rust]
dead_code = "allow"
missing_debug_implementations = "deny"
unsafe_code = "deny"
warnings = "deny"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
allow_attributes = "deny"
fallible_impl_from = "deny"
unwrap_used = "deny"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.release]
shared-version = true
dependent-version = "upgrade"
tag-name = "v{{version}}"
