[workspace]
default-members = [
    "drivers/*",
    "rsql_cli",
    "rsql_core",
    "rsql_driver",
    "rsql_drivers",
    "rsql_formatters",
    "rsql_repl",
]
members = [
    "drivers/*",
    "examples/*",
    "rsql_cli",
    "rsql_core",
    "rsql_driver",
    "rsql_drivers",
    "rsql_formatters",
    "rsql_repl",
]
resolver = "3"

[workspace.package]
authors = ["Brian Heineman <brian.heineman@gmail.com>"]
categories = ["command-line-interface", "command-line-utilities", "database"]
edition = "2024"
keywords = ["database", "mysql", "postgresql", "sql", "sqlite"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/theseus-rs/rsql"
rust-version = "1.94.1"
version = "0.19.3"

[workspace.dependencies]
ansi_colours = "1.2.3"
anyhow = "1.0.102"
arboard = "3.6.1"
arrow-array = "58.1.0"
arrow-flight = "58.1.0"
async-trait = "0.1.89"
axoupdater = "0.10.0"
aws-credential-types = { version = "1.2.14", features = ["hardcoded-credentials"] }
aws-config = { version = "1.8.15", features = ["behavior-version-latest"] }
# Required for cross builds: https://aws.github.io/aws-lc-rs/platform_support.html
aws-lc-rs = { version = "1.16.2", features = ["bindgen"] }
aws-sdk-dynamodb = { version = "1.110.0", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.129.0", features = ["behavior-version-latest"] }
base64 = "0.22.1"
bit-vec = "0.6.3"
brotli = "8.0.2"
bzip2 = "0.6.1"
calamine = "0.34.0"
chrono = "0.4.41"
clap = "4.6.0"
clap-stdin = "0.8.1"
clearscreen = "4.0.6"
clickhouse = "0.15.0"
colored = "3.1.1"
config = "0.15.22"
criterion = "0.8.2"
csv = "1.4.0"
dark-light = "2.0.0"
dirs = "6.0.0"
dotenvy = "0.15.7"
duckdb = "1.10501.0"
file_type = "0.8.11"
flate2 = "1.1.9"
form_urlencoded = "1.2.2"
futures-util = "0.3.32"
getrandom = "0.4.2"
i18n_inflector = "0.2.1"
icu = "2.2.0"
jiff-icu = "0.2.2"
indexmap = "2.14.0"
indicatif = "0.18.4"
indoc = "2.0.7"
inquire = "0.9.4"
jiff = "0.2.23"
jwt-simple = { version = "0.12.14", default-features = false }
liblzma = "0.4.6"
libsql = "0.9.30"
lz4 = "1.28.1"
mockall = "0.14.0"
orc-rust = { version = "0.8.0", default-features = false }
os_info = "3.14.0"
polars = { version = "0.53.0", default-features = false, features = ["dtype-categorical"] }
polars-sql = "0.53.0"
postgresql_embedded = "0.20.2"
quick-xml = "0.39.2"
regex = "1.12.3"
reqwest = "0.13.2"
rusqlite = "0.30.0"
rust_decimal = "1.41.0"
rust-i18n = "4.0.0"
rustyline = "18.0.0"
serde = "1.0.228"
serde_json = "1.0.149"
serde-saphyr = "0.0.23"
sha2 = "0.11.0"
sqlx = "0.7.4"
sqlparser = "0.61.0"
supports-color = "3.0.2"
sys-locale = "0.3.2"
syntect = "5.3.0"
tabled = "0.20.0"
tempfile = "3.27.0"
termbg = "0.6.2"
test-log = "0.2.19"
testcontainers = "0.27.2"
testcontainers-modules = "0.15.0"
thiserror = "2.0.18"
tiberius = { version = "0.12.3", default-features = false }
tokio = "1.51.1"
tokio-postgres = "0.7.17"
tokio-util = "0.7.18"
tonic = "0.14.5"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-indicatif = "0.3.14"
tracing-subscriber = "0.3.23"
unicode-width = "0.2.2"
url = "2.5.8"
uuid = "1.23.0"
wiremock = "0.6.5"
zstd = "0.13.3"

[workspace.lints.rust]
dead_code = "allow"
missing_debug_implementations = "deny"
unsafe_code = "deny"
warnings = "deny"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
allow_attributes = "deny"
fallible_impl_from = "deny"
unwrap_used = "deny"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.release]
shared-version = true
dependent-version = "upgrade"
tag-name = "v{{version}}"
