[package]
authors.workspace = true
build = "build.rs"
categories.workspace = true
description = "rsql is a command line interface for PostgreSQL and SQLite3."
documentation = "https://theseus-rs.github.io/rsql/rsql_cli/"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "rsql_cli"
repository.workspace = true
version.workspace = true

[package.metadata.wix]
upgrade-guid = "96A50426-D43C-4A40-B2C1-568C75AF4C3D"
path-guid = "551FFEF3-89DA-490E-BC41-A0E866DEF5EE"
license = false
eula = false

[build-dependencies]
anyhow = { workspace = true }

[target."cfg(windows)".build-dependencies]
static_vcruntime = { version = "2.0" }
winres = { version = "0.1" }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
colored = { workspace = true }
dotenvy = { workspace = true }
os_info = { workspace = true }
rsql_core = { path = "../rsql_core", version = "0.7.4", features = ["all"] }
rust-i18n = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
tracing = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
tokio = { workspace = true }

[[bin]]
name = "rsql"
path = "src/main.rs"

[package.metadata.docs.rs]
features = []
rustdoc-args = ["--all-targets"]
targets = ["x86_64-unknown-linux-gnu"]
