[package]
authors.workspace = true
build = "build.rs"
categories = ["command-line-utilities", "database"]
description = "rsql is a CLI for CockroachDB, DuckDB, LibSQL, MariaDB, MySQL, PostgreSQL, Redshift, Snowflake, SQLite3 and SQL Server."
documentation = "https://theseus-rs.github.io/rsql/rsql_cli/"
edition.workspace = true
homepage = "https://theseus-rs.github.io/rsql/rsql_cli/"
keywords.workspace = true
license.workspace = true
name = "rsql_cli"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.wix]
upgrade-guid = "96A50426-D43C-4A40-B2C1-568C75AF4C3D"
path-guid = "551FFEF3-89DA-490E-BC41-A0E866DEF5EE"
license = false
eula = false

[build-dependencies]
anyhow = { workspace = true }

[target."cfg(windows)".build-dependencies]
static_vcruntime = { version = "2.0" }
winres = { version = "0.1" }

[dependencies]
anyhow = { workspace = true }
axoupdater = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
colored = { workspace = true }
dotenvy = { workspace = true }
inquire = { workspace = true }
os_info = { workspace = true }
rsql_core = { path = "../rsql_core", version = "0.17.3", features = ["all"] }
rust-i18n = { workspace = true }
serde = { workspace = true }
supports-color = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }

[features]
default = ["native-tls"]
native-tls = ["rsql_core/native-tls"]
rustls = ["rsql_core/rustls"]

[[bin]]
name = "rsql"
path = "src/main.rs"

[package.metadata.docs.rs]
features = []
rustdoc-args = []
targets = ["x86_64-unknown-linux-gnu"]
