[package]
authors.workspace = true
categories.workspace = true
description = "rsql core library for creating a command line SQL interfaces"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "rsql_core"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
config = { workspace = true }
dark-light = { workspace = true }
dirs = { workspace = true }
indicatif = { workspace = true }
rsql_formatters = { path = "../rsql_formatters", version = "0.18.3" }
rust-i18n = { workspace = true }
sys-locale = { workspace = true }
termbg = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-indicatif = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "tracing-log",
] }

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
getrandom = { workspace = true, features = ["wasm_js"] }
