[package]
authors.workspace = true
categories.workspace = true
description = "rsql driver"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "rsql_driver"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
file_type = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
jiff = { workspace = true, features = ["serde"] }
mockall = { workspace = true }
num-format = { workspace = true }
rust_decimal = { workspace = true, features = ["serde-with-str"] }
rust-i18n = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, optional = true, features = ["preserve_order"] }
sqlparser = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
getrandom = { workspace = true, features = ["wasm_js"] }
uuid = { workspace = true, features = ["js"] }

[dev-dependencies]
rsql_driver_test_utils = { path = "../drivers/test_utils", version = "0.18.4" }
serde_json = { workspace = true, features = ["preserve_order"] }
tokio = { workspace = true, features = ["macros", "rt"] }

[features]
default = []
json = ["dep:serde_json"]
